force-app/main/default/objects/grax__GRAX_Schedule_Process__c/grax__GRAX_Schedule_Process__c.object-meta.xml
<CustomObject>
    <description>This object is the record which will be executed to back up/archive records from Salesforce. This record contains the objects, schedule frequency, start time, etc. of the back up/archive process.</description>
    <label>GRAX Schedule Process</label>
    <nameField>
        <displayFormat>GRAX-Proc-{0000000}</displayFormat>
        <label>GRAX Schedule Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GRAX Schedule Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>