force-app/main/default/objects/grax__GRAX_Schedule_Process__c/fields/grax__Archive__c.field-meta.xml
<CustomField>
    <fullName>grax__Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this an “Archive” process</description>
    <label>Archive</label>
    <type>Checkbox</type>
</CustomField>