force-app/main/default/objects/grax__GRAX_Schedule_Process__c/fields/grax__currentElementIndexTotalIterations__c.field-meta.xml
<CustomField>
    <fullName>grax__currentElementIndexTotalIterations__c</fullName>
    <description>Field Used for Internal Auditing</description>
    <label>currentElementIndexTotalIterations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>