force-app/main/default/objects/grax__GRAX_Schedule_Process__c/fields/grax__Execution_Unique_Key_Helper__c.field-meta.xml
<CustomField>
    <fullName>grax__Execution_Unique_Key_Helper__c</fullName>
    <description>Field Used for Internal Auditing</description>
    <label>Execution Unique Key Helper</label>
    <length>20</length>
    <type>Text</type>
</CustomField>