force-app/main/default/objects/grax__GRAX_Schedule_Process__c/fields/grax__Last_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>grax__Last_Run_Date__c</fullName>
    <description>Last Date this process successfully ran</description>
    <inlineHelpText>Last time this Scheduled Process was run</inlineHelpText>
    <label>Last Run Date</label>
    <type>DateTime</type>
</CustomField>