force-app/main/default/objects/grax__GRAX_Schedule_Process__c/fields/grax__Name__c.field-meta.xml
<CustomField>
    <fullName>grax__Name__c</fullName>
    <description>Name of the Scheduled Process</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>