force-app/main/default/objects/grax__GRAX_Schedule_Process__c/fields/grax__Send_Notifications__c.field-meta.xml
<CustomField>
    <fullName>grax__Send_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes if notifications will be sent to users</description>
    <label>Send Notifications</label>
    <type>Checkbox</type>
</CustomField>