force-app/main/default/objects/grax__GRAX_Schedule_Process__c/fields/grax__Status__c.field-meta.xml
<CustomField>
    <fullName>grax__Status__c</fullName>
    <description>Status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Finding Data</fullName>
            </value>
            <value>
                <fullName>Aborted</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Pending send data to GRAX</fullName>
            </value>
            <value>
                <fullName>Sending data to GRAX</fullName>
            </value>
            <value>
                <fullName>Completed - Errors sending data</fullName>
            </value>
            <value>
                <fullName>Backing Up Data</fullName>
            </value>
            <value>
                <fullName>Completed - Errors Backing Up Data</fullName>
            </value>
            <value>
                <fullName>Starting Archive Process</fullName>
            </value>
            <value>
                <fullName>Deleting Salesforce records</fullName>
            </value>
            <value>
                <fullName>Completed - Errors deleting records</fullName>
            </value>
            <value>
                <fullName>Waiting Files Backup to Complete</fullName>
            </value>
            <value>
                <fullName>Error Backing Up Files to Storage</fullName>
            </value>
            <value>
                <fullName>Aborting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>