force-app/main/default/objects/grax__GRAX_Schedule_Process__c/fields/grax__Target_End_Datetime__c.field-meta.xml
<CustomField>
    <fullName>grax__Target_End_Datetime__c</fullName>
    <description>Date/Time from the field value in the &quot;Date Field&quot; from when this Scheduled Process will end.</description>
    <inlineHelpText>Date/Time from the field value in the &quot;Date Field&quot; from when this Scheduled Process will end.</inlineHelpText>
    <label>Target End Datetime</label>
    <type>DateTime</type>
</CustomField>