force-app/main/default/objects/grax__GRAX_Schedule_Process__c/fields/grax__Total_Objects_To_Process__c.field-meta.xml
<CustomField>
    <fullName>grax__Total_Objects_To_Process__c</fullName>
    <description>Total # of objects to be processed within this Scheduled Process</description>
    <label>Total Objects To Process</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>